Fix T83777: Crash when enabling guides

Also adjusted adjusted guiding UI parameters so that guiding will not get invalidated when changing domain values.